Interface: better solution to prevent editor from overflowing browser window in IE11

--- a/packages/interface/src/components/interface-skeleton/style.scss
+++ b/packages/interface/src/components/interface-skeleton/style.scss
@@ -36,8 +36,7 @@ html.interface-interface-skeleton__html-container {
 .interface-interface-skeleton__editor {
 	display: flex;
 	flex-direction: column;
-	flex-grow: 1;
-	width: 100%;
+	flex: 0 1 100%;
 }
 
 @include editor-left(".interface-interface-skeleton");
